--- a/src/main/resources/addon.yml
+++ b/src/main/resources/addon.yml
@@ -1,3 +1,3 @@
 name: FreeCases
 version: '${version}'
-main: com.jodexindustries.freecases.bootstrap.FreeCasesAddon
+main: com.jodexindustries.freecases.bootstrap.MainAddon
